# humanssh

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.lock.reference  Cargo.toml  QA_FINDINGS.md  README.md  clippy.toml  typos.toml
.cargo/: ci-config.toml  config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
benches/: benchmark.rs
crates/actions/: Cargo.toml
crates/actions/src/: actions.rs
crates/collections/: Cargo.toml
crates/collections/src/: collections.rs
crates/gpui_tokio/: Cargo.toml
crates/gpui_tokio/src/: gpui_tokio.rs
crates/humanssh/: Cargo.toml
crates/humanssh/benches/: benchmark.rs
crates/humanssh/src/: main.rs
crates/paths/: Cargo.toml
crates/paths/src/: paths.rs
crates/platform/: Cargo.toml
crates/platform/src/: macos.rs
crates/release_channel/: Cargo.toml
crates/release_channel/src/: release_channel.rs
crates/settings/: Cargo.toml
crates/settings/src/: constants.rs  file.rs  settings.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: pty_handler.rs  pty_handler_tests.rs  pty_types.rs  recording.rs  shell_validation.rs  terminal.rs  types.rs  vt_processor.rs
crates/terminal_view/: Cargo.toml
crates/terminal_view/src/: colors.rs  copy_mode.rs  kitty_keyboard.rs  pane.rs  pane_input.rs  pane_mouse.rs  pane_render.rs  pane_search.rs  pane_tests.rs  terminal_view.rs
crates/theme/: Cargo.toml
crates/theme/src/: theme.rs  theme_actions.rs
crates/util/: Cargo.toml
crates/util/src/: util.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: command_palette.rs  pane.rs  pane_group.rs  pane_group_view.rs  quick_terminal.rs  scratchpad.rs  settings_opener.rs  status_bar.rs  workspace.rs  workspace_render.rs  workspace_view.rs  workspace_view_tests.rs
docs/plans/: 2026-01-30-mvp-design.md  2026-02-12-config-file-design.md  2026-02-12-config-file-plan.md  2026-02-12-feature-roadmap-research.md  2026-02-12-gpui-api-audit.md  2026-02-12-pty-decoupling-design.md  2026-02-12-zed-structure-design.md  2026-02-13-tier3-features-design.md
resources/: HumanSSH.entitlements  Info.plist  VolumeIcon.icns
scripts/: build-dmg.sh  build-windows.ps1  pre-commit  setup-hooks.sh
src/: actions.rs  config.rs  lib.rs  main.rs  test_utils.rs  theme.rs
src/app/: mod.rs  pane.rs  pane_group.rs  pane_group_view.rs  settings.rs  status_bar.rs  workspace.rs
src/config/: file.rs  mod.rs
src/platform/: mod.rs
src/splits/: mod.rs
src/ssh/: mod.rs
src/tabs/: mod.rs
src/terminal/: colors.rs  mod.rs  pane.rs  pty_handler.rs  types.rs
src/theme/: actions.rs  colors.rs  mod.rs  persistence.rs
tests/: integration_tests.rs
tests/common/: mod.rs
themes/: catppuccin.json  dracula.json  gruvbox.json  high-contrast.json  oled.json  tokyonight.json
tooling/xtask/: Cargo.toml
tooling/xtask/src/: main.rs
