[package]
name = "humanssh"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/humancorp/humanssh"

[dependencies]
# UI Framework (Zed's GPUI)
gpui = "0.2.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"

# Terminal emulation (Alacritty's battle-tested emulator)
alacritty_terminal = "0.25"
portable-pty = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Error handling and logging (Zed patterns)
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
parking_lot = "0.12"
once_cell = "1.19"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"  # Cross-platform directory paths
base64 = "0.22"  # For encoding dropped images

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termwiz = { version = "0.23.3", features = ["use_serde"] }

[dev-dependencies]
# GPUI test support
gpui = { version = "0.2.2", features = ["test-support"] }

# Async test utilities
tokio-test = "0.4"

# Mocking framework
mockall = "0.13"

# Property-based testing
proptest = "1.5"

# Parameterized tests
test-case = "3.3"

# Better assertion diffs
pretty_assertions = "1.4"

# Temporary file/directory testing
tempfile = "3.14"

# Benchmarking framework
criterion = { version = "0.5", features = ["html_reports"] }

# HTTP mocking (useful for testing SSH-related HTTP interactions)
wiremock = "0.6"

# Serial test execution for tests that can't run in parallel
serial_test = "3.2"

# Testing log/tracing output
tracing-test = "0.2"

[[bench]]
name = "benchmark"
harness = false

[profile.dev]
opt-level = 1
debug = "line-tables-only"
incremental = true
codegen-units = 256
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2
debug = false

[profile.dev.package.gpui]
opt-level = 3

[profile.dev.package.gpui-component]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.bundle]
name = "HumanSSH"
identifier = "com.humancorp.humanssh"
copyright = "Copyright 2025"
category = "Developer Tools"
short_description = "A fast, cross-platform SSH terminal"
