[workspace]
resolver = "2"
members = [
    "crates/humanssh",
    "crates/actions",
    "crates/settings",
    "crates/platform",
    "crates/theme",
    "crates/terminal",
    "crates/terminal_view",
    "crates/workspace",
    "tooling/xtask",
]
default-members = ["crates/humanssh"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/humancorp/humanssh"
publish = false

[workspace.dependencies]
# Internal crates
actions = { path = "crates/actions" }
settings = { path = "crates/settings" }
platform = { path = "crates/platform" }
theme = { path = "crates/theme" }
terminal = { path = "crates/terminal" }
terminal_view = { path = "crates/terminal_view" }
humanssh_workspace = { path = "crates/workspace" }

# UI Framework (Zed's GPUI)
gpui = "0.2.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"

# Terminal emulation
alacritty_terminal = "0.25"
portable-pty = "0.8"
termwiz = { version = "0.23.3", features = ["use_serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling and logging
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency
parking_lot = "0.12"
once_cell = "1.19"

# Identifiers
uuid = { version = "1.0", features = ["v4"] }

# Filesystem & system
dirs = "5.0"
sysinfo = "0.32"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
toml_edit = "0.22"

# Config file watching
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"

# macOS native (conditional)
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSObject"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSDockTile", "NSRunningApplication"] }

# Testing
tokio-test = "0.4"
mockall = "0.13"
proptest = "1.5"
test-case = "3.3"
pretty_assertions = "1.4"
tempfile = "3.14"
criterion = { version = "0.5", features = ["html_reports"] }
wiremock = "0.6"
serial_test = "3.2"
tracing-test = "0.2"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
disallowed_methods = "deny"
style = { level = "allow", priority = -1 }
type_complexity = "allow"
too_many_arguments = "allow"
large_enum_variant = "allow"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[profile.dev]
opt-level = 1
debug = "line-tables-only"
incremental = true
codegen-units = 256
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2
debug = false

[profile.dev.package.gpui]
opt-level = 3

[profile.dev.package.gpui-component]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
