[package]
name = "gpui_tokio"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "gpui_tokio"
path = "src/gpui_tokio.rs"
doctest = false

[dependencies]
gpui.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }

[lints]
workspace = true
