[package]
name = "platform"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/platform.rs"
doctest = false

[dependencies]
anyhow.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-foundation.workspace = true
objc2-app-kit.workspace = true

[lints]
workspace = true
