[package]
name = "settings"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/settings.rs"
doctest = false

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit.workspace = true
dirs.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
parking_lot.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
