[package]
name = "terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/terminal.rs"
doctest = false

[dependencies]
settings.workspace = true
alacritty_terminal.workspace = true
portable-pty.workspace = true
termwiz.workspace = true
parking_lot.workspace = true
tracing.workspace = true
serde.workspace = true
anyhow.workspace = true
tokio.workspace = true
sysinfo.workspace = true
once_cell.workspace = true
uuid.workspace = true
gpui.workspace = true
dirs.workspace = true
serde_json.workspace = true

[dev-dependencies]
mockall.workspace = true
proptest.workspace = true
test-case.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true

[lints]
workspace = true
