[package]
name = "terminal_view"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/terminal_view.rs"
doctest = false

[dependencies]
terminal.workspace = true
theme.workspace = true
settings.workspace = true
actions.workspace = true
gpui.workspace = true
gpui-component.workspace = true
parking_lot.workspace = true
tracing.workspace = true
anyhow.workspace = true
alacritty_terminal.workspace = true
sysinfo.workspace = true
uuid.workspace = true
once_cell.workspace = true
termwiz.workspace = true
regex.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
pretty_assertions.workspace = true
proptest.workspace = true
test-case.workspace = true

[lints]
workspace = true
