[package]
name = "theme"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/theme.rs"
doctest = false

[dependencies]
settings.workspace = true
actions.workspace = true
platform.workspace = true
gpui.workspace = true
gpui-component.workspace = true
parking_lot.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
once_cell.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
