[package]
name = "humanssh_workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/workspace.rs"
doctest = false

[dependencies]
terminal.workspace = true
terminal_view.workspace = true
theme.workspace = true
settings.workspace = true
actions.workspace = true
platform.workspace = true
gpui.workspace = true
gpui-component.workspace = true
parking_lot.workspace = true
tracing.workspace = true
anyhow.workspace = true
uuid.workspace = true
sysinfo.workspace = true
dirs.workspace = true
once_cell.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }

[lints]
workspace = true
